@@ -1,0 +1,3 @@
+## $Id$
+
+static Notify_Default_Event_Manager_Objects_Factory "-DispatchingThreads 1"
